<resources>
    <string name="app_name">teachwise</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="edit_profile">Edit Profile</string>

</resources>
