<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:padding="40dp"
    android:id="@+id/signIn_layout"
    style="@style/PageTheme">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"/>

    <!--    TextView: label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>


    <!--    EditText: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--    EditText: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_layout"
        app:passwordToggleEnabled="true"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--   Button: Login User -->
    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_key"
        />





    <!--    TextView: Recover password-->
    <TextView
        android:id="@+id/recover_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_below="@id/signIn_btn"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlack"/>

    <!--    TextView: Go To Register Activity-->
    <TextView
        android:id="@+id/notYetMember_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Not yet a member? Sign Up"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorBlack"/>

    <!-- ProgressBar: show register status-->
    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_below="@+id/notYetMember_text"
        android:indeterminateTint="#1a09d6"
        android:layout_marginTop="20dp"/>

</RelativeLayout>